apps/staging/portfolio/scaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio 
spec:
  replicas: 1
