apps/staging/portfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  ingressClassName: nginx
  rules:
      - host: staging.dariomazza.net
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: portfolio
                  port:
                    number: 80
  tls:
    - hosts:
      - staging.dariomazza.net      
      secretName: portfolio-staging-tls
